[gd_scene load_steps=4 format=2]

[ext_resource path="res://map/blocks/faith_platform/faith_platform.gd" type="Script" id=1]
[ext_resource path="res://map/blocks/basic_platform.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 16 )

[node name="faith_platform" type="Node2D"]
script = ExtResource( 1 )

[node name="rise_pos" type="Node2D" parent="."]
position = Vector2( 0, 16 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="basic_platform" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 48 )
scale = Vector2( 3.2, 0.8 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
